force-app/main/default/objects/Contact/fields/Job_Title_Oil_Gas__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Oil_Gas__c</fullName>
    <label>Job Title Oil Gas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>