force-app/main/default/objects/Contact/fields/Safety_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Safety_Certifications__c</fullName>
    <label>Safety Certifications</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>