force-app/main/default/objects/Contact/fields/TWIC_Expiration__c.field-meta.xml
<CustomField>
    <fullName>TWIC_Expiration__c</fullName>
    <label>TWIC Expiration</label>
    <type>Date</type>
</CustomField>