force-app/main/default/objects/Contact/recordTypes/Account_Manager.recordType-meta.xml
<RecordType>
    <fullName>Account_Manager</fullName>
    <label>Account Manager</label>
    <active>true</active>
</RecordType>