force-app/main/default/objects/Contact/recordTypes/Engineer.recordType-meta.xml
<RecordType>
    <fullName>Engineer</fullName>
    <label>Engineer</label>
    <active>true</active>
</RecordType>