force-app/main/default/objects/Contact/recordTypes/Field_Tech.recordType-meta.xml
<RecordType>
    <fullName>Field_Tech</fullName>
    <label>Field Tech</label>
    <active>true</active>
</RecordType>