force-app/main/default/objects/Contact/recordTypes/HSE_Officer.recordType-meta.xml
<RecordType>
    <fullName>HSE_Officer</fullName>
    <label>HSE Officer</label>
    <active>true</active>
</RecordType>