force-app/main/default/objects/Contact/recordTypes/Landman.recordType-meta.xml
<RecordType>
    <fullName>Landman</fullName>
    <label>Landman</label>
    <active>true</active>
</RecordType>