force-app/main/default/objects/Contact/recordTypes/Regulatory_Contact.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Contact</fullName>
    <label>Regulatory Contact</label>
    <active>true</active>
</RecordType>